--- a/src/app/components/ui/weather-card-section/weather-card-section.component.css
+++ b/src/app/components/ui/weather-card-section/weather-card-section.component.css
@@ -34,3 +34,11 @@ h2 {
 ::-webkit-scrollbar {
     display: none;
 }
+
+/* Tablet view */
+@media (max-width: 996px) {
+    /* Styling host element */
+    :host {
+        gap: 24px;
+    }
+}
