--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -41,3 +41,23 @@ h1 {
     margin-top: 25%;
     align-self: center;
 }
+
+/* Tablet view */
+@media (max-width: 996px) {
+    /* Styling host element */
+    :host {
+        flex: 2 1 auto;
+        margin-bottom: 25%;
+
+        padding: 20px 24px 20px;
+
+        /* Removing overflow properties */
+        overflow-y: unset;
+        white-space: unset;
+    }
+
+    /* Styling no city text */
+    h1 {
+        margin-top: 5%;
+    }
+}
