--- a/src/app/components/ui/weather-highlight-cards/uv-index-card/uv-index-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/uv-index-card/uv-index-card.component.css
@@ -37,3 +37,18 @@ span {
     text-align: center;
     line-height: 62px;
 }
+
+/* Tablet view */
+@media (max-width: 996px) {
+    /* Styling host element */
+    :host {
+        flex: 1 0 162px;
+        max-width: 162px;
+    }
+
+    /* Styling container */
+    .container {
+        height: 150px;
+        padding: 15px 10px 33px 10px;
+    }
+}
