--- a/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.css
@@ -55,3 +55,18 @@ p {
     font-size: 18px;
     line-height: 163.2%;
 }
+
+/* Tablet view */
+@media (max-width: 996px) {
+    /* Styling host element */
+    :host {
+        flex: 1 0 162px;
+        max-width: 162px;
+    }
+
+    /* Styling container */
+    .container {
+        height: 150px;
+        padding: 15px 10px 33px 10px;
+    }
+}
