--- a/src/app/root/app.component.css
+++ b/src/app/root/app.component.css
@@ -1,7 +1,16 @@
+/* Styling host element */
 :host {
     min-height: 100vh;
     width: 100vw;
 
     display: flex;
     flex-direction: row;
+}
+
+/* Tablet View */
+@media (max-width: 996px) {
+    /* Styling host element */
+    :host {
+        flex-direction: column;
+    }
 }
