--- a/src/app/components/containers/sidebar-container/sidebar-container.component.css
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.css
@@ -36,7 +36,7 @@
 }
 
 /* Tablet View */
-@media (max-width: 996px) {
+@media (max-width: 1024px) {
     /* Styling host element */
     :host {
         max-height: 380px;
@@ -49,6 +49,8 @@
         position: fixed;
         bottom: 0;
         left: 0;
+        z-index: 1;
+
         margin-top: 0;
         box-sizing: border-box;
 
