--- a/src/app/root/app.component.css
+++ b/src/app/root/app.component.css
@@ -1,14 +1,14 @@
 /* Styling host element */
 :host {
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
 
     display: flex;
     flex-direction: row;
 }
 
 /* Tablet View */
-@media (max-width: 996px) {
+@media (max-width: 1024px) {
     /* Styling host element */
     :host {
         flex-direction: column;
