--- a/src/app/components/ui/weather-card/weather-card.component.css
+++ b/src/app/components/ui/weather-card/weather-card.component.css
@@ -41,3 +41,11 @@ p {
     line-height: 163.2%;
     color: var(--outer-black-main);
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling container */
+    .container {
+        width: 156px;
+    }
+}
