--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -61,3 +61,20 @@ h1 {
         margin-top: 5%;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling host element */
+    :host {
+        margin-bottom: 50%;
+        padding: 20px 16px;
+
+        gap: 20px;
+    }
+
+    /* Styling no city text */
+    h1 {
+        font-size: 38px;
+        line-height: 49px;
+    }
+}
