--- a/src/app/components/ui/about-tab/about-tab.component.css
+++ b/src/app/components/ui/about-tab/about-tab.component.css
@@ -27,3 +27,20 @@ p {
         margin-bottom: 24px;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling Header */
+    h1 {
+        margin-top: unset;
+        margin-bottom: 5px;
+
+        font-size: 38px;
+        line-height: 49px;
+    }
+
+    /* Styling Main Text*/
+    p {
+        font-size: 14px;
+    }
+}
