--- a/src/app/components/ui/city-list-tab/city-list-tab.component.css
+++ b/src/app/components/ui/city-list-tab/city-list-tab.component.css
@@ -23,3 +23,13 @@
         gap: 15px;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling host elements to properly align items */
+    :host {
+        margin-top: 12%;
+
+        gap: 12px;
+    }
+}
