--- a/src/app/components/ui/city-search-bar/city-search-bar.component.css
+++ b/src/app/components/ui/city-search-bar/city-search-bar.component.css
@@ -60,3 +60,27 @@ button:hover {
 button:active {
     background-color: var(--picton-blue-active);
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling form element */
+    form {
+        align-items: center;
+    }
+
+    /* Styling search icon */
+    img {
+        width: 25px;
+        height: 25px;
+    }
+
+    /* Styling Text Input */
+    #citySearchInput, #citySearchInput::placeholder {
+        font-size: 14px;
+    }
+
+    /* Styling Form Button */
+    button {
+        font-size: 14px;
+    }
+}
