--- a/src/app/components/ui/na/na.component.css
+++ b/src/app/components/ui/na/na.component.css
@@ -30,3 +30,17 @@ img {
         margin-top: 8%;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling NA Icon */
+    img {
+        margin-top: 22%;
+
+        min-height: 30px;
+        min-width: 30px;
+
+        max-height: 75px;
+        max-width: 175px;
+    }
+}
