--- a/src/app/components/ui/weather-highlight-cards/rain-chance-card/rain-chance-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/rain-chance-card/rain-chance-card.component.css
@@ -52,3 +52,16 @@ span {
         padding: 15px 10px 33px 10px;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling host element */
+    :host {
+        max-width: 156px;
+    }
+
+    /* Styling container */
+    .container {
+        padding: 15px 7px 33px;
+    }
+}
