--- a/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.css
@@ -70,3 +70,16 @@ p {
         padding: 15px 10px 33px 10px;
     }
 }
+
+/* Mobile view */
+@media (max-width: 450px) {
+    /* Styling host element */
+    :host {
+        max-width: 156px;
+    }
+
+    /* Styling container */
+    .container {
+        padding: 15px 7px 40px;
+    }
+}
